fix scrollbar for mozilla

--- a/src/ui/horisontalScroll/horisontalScroll.module.scss
+++ b/src/ui/horisontalScroll/horisontalScroll.module.scss
@@ -3,7 +3,8 @@
     overflow-x: auto;
     scroll-behavior: smooth;
     justify-content: flex-start;
-    flex-wrap: nowrap; 
+    flex-wrap: nowrap;
+    scrollbar-width: none;
 }
 
 .scroll::-webkit-scrollbar {
